Se Implementa menus y se corrige integracion del proyecto, completa funcionalidades de clientes, playlist y menus